@@ -312,6 +312,9 @@ $rcmail_config['dst_active'] = (bool)date('I');
 // prefer displaying HTML messages
 $rcmail_config['prefer_html'] = TRUE;
 
+// display images in mail from known senders
+$rcmail_config['addrbook_show_images'] = FALSE;
+
 // compose html formatted messages by default
 $rcmail_config['htmleditor'] = FALSE;
 
